# acunetix-rs

./: Cargo.toml  openapi.yaml
acunetix-cli/: Cargo.toml
acunetix-cli/src/: cli.rs  main.rs
acunetix-sdk/: Cargo.toml  README.md
acunetix-sdk/docs/: DefaultApi.md  Info.md  LicenseExtra.md  LoginReq.md  Pagination.md  ScanAppHostTargetInfo.md  ScanAppHostWebScanStatus.md  ScanAppMessage.md  ScanAppTargetInfo.md  ScanAppWvsMainStatus.md  ScanDetail.md  ScanStat.md  ScansItem.md  Schedual.md  Target.md  TargetConfig.md  TargetConfigAuthentication.md  TargetConfigCustomCookies.md  TargetConfigProxy.md  TargetConfigSshCredentials.md  TargetDel.md  TargetDetail.md  TargetDetailAllOf.md  TargetResp.md  TargetRespAllOf.md  TargetsResp.md
acunetix-sdk/src/models/: license.rs  license_extra.rs  license_limit.rs  scan.rs  scan_app.rs  scan_app_host_target_info.rs  scan_detail.rs  scan_detail_current_session.rs  scan_stat_serverity_counts.rs  target.rs  target_config_authentication.rs  target_config_login_credentials.rs  (+2 more)
acunetix-std/: Cargo.toml
acunetix_cli/: Cargo.toml
acunetix_cli/src/: cli.rs  main.rs
acunetix_gui/: Cargo.toml
acunetix_sdk/: Cargo.toml  README.md
acunetix_sdk/.openapi-generator/: FILES
acunetix_sdk/docs/: DefaultApi.md  License.md  LicenseLimit.md  Me.md  Profile.md  Profiles.md  Scan.md  ScanApp.md  ScanAppHost.md  ScanAppVuln.md  ScanAppWvs.md  ScanAppWvsMain.md  ScanDetailCurrentSession.md  ScanStatServerityCounts.md  Scans.md  TargetConfigLogin.md  TargetConfigLoginCredentials.md  UpdateInfo.md
acunetix_std/: Cargo.toml
src/: main.rs
(+46 files in other folders)
